# job-matcher

./: .env.example  .gitignore  .impeccable.md  README.md  docker-compose.yml  requirement.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/crawl/: agent.py  browser.py  category.py  dedup.py  extractor.py  job_type.py  location.py  pipeline.py  prompts.py  sandbox.py  scheduler.py  selector_cache.py  tools.py  traffic_utils.py
backend/app/llm/: client.py  context.py
backend/app/llm/prompts/: chat.py  (+5 more)
backend/app/middleware/: __init__.py  readonly.py
backend/app/models/: chat.py  company.py  crawl_task.py  crawler_script.py  favorite.py  job.py  report.py  resume.py
backend/app/routers/: chat.py  companies.py  compare.py  crawl.py  favorites.py  jobs.py  match.py  resume.py  settings.py
backend/app/schemas/: chat.py  common.py  company.py  crawl.py  crawler_script.py  favorite.py  job.py  report.py  resume.py
backend/app/services/: chat_service.py  company_service.py  crawl_service.py  favorite_service.py  job_service.py  report_service.py  resume_service.py  settings_service.py
backend/app/utils/: file_parser.py
backend/config/: companies.yml  settings.yml
backend/data/: category_cache.json  job_matcher.db
backend/scripts/: build_prompt.py  import_data.py  interceprot.py  migrate_location.py  test_crawl_stages.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_category.py  test_config.py  test_crawler.py  test_database.py  test_exceptions.py  test_exceptions_middleware.py  test_llm.py  test_models.py  test_resume.py  test_schemas.py  test_selector_cache.py
(+110 files in other folders)
