[project]
name = "job-matcher-backend"
version = "0.1.0"
description = "智能岗位聚合与匹配平台 - 后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "httpx[socks]>=0.28.1",
    "python-dotenv>=1.2.2",
    "docker>=7.0.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
